# OpenANN

./: CMakeLists.txt
OpenANN/: ActivationFunctions.h  CompressionMatrixFactory.h  Compressor.h  EnsembleLearner.h  ErrorFunctions.h  Evaluation.h  IntrinsicPlasticity.h  KMeans.h  Learner.h  Net.h  Normalization.h  PCA.h  Preprocessing.h  RBM.h  Transformer.h  ZCAWhitening.h
OpenANN/io/: DataSet.h  DataSetView.h  DataStream.h  DirectStorageDataSet.h  FANN.h  LibSVM.h  WeightedDataSet.h
OpenANN/layers/: FullyConnected.h  Input.h  Layer.h  RBF.h  SigmaPi.h
OpenANN/optimization/: AdamSGD.h  CG.h  IPOPCMAES.h  LBFGS.h  LMA.h  MBSGD.h  Optimizable.h  Optimizer.h
OpenANN/rl/: ActionSpace.h  DeepDeterministicPolicyGradient.h  Environment.h  StateSpace.h
OpenANN/util/: EigenWrapper.h  Random.h
benchmarks/mnist/: Distorter.h  IDXLoader.h
benchmarks/p300speller/: BCIDataSet.h  Decimator.h
examples/polebalancing/: CMakeLists.txt  DoubleExponentialSmoothing.h  DoublePoleBalancing.h  SinglePoleBalancing.h  spb_ddpg.cpp
examples/twospirals/: CreateTwoSpiralsDataSet.h  TwoSpiralsVisualization.h
src/: ActivationFunctions.cpp  AdaBoost.cpp  AdamSGD.cpp  Bagging.cpp  CMakeLists.txt  Convenience.cpp  DataSetView.cpp  DeepDeterministicPolicyGradient.cpp  DirectStorageDataSet.cpp  EigenWrapper.cpp  FullyConnected.cpp  Learner.cpp  MBSGD.cpp  Net.cpp  RBF.cpp  SparseAutoEncoder.cpp  WeightedDataSet.cpp
test/: AdamSGDTestCase.cpp  AdamSGDTestCase.h  DropoutTestCase.cpp  EigenWrapperTestCase.cpp  EigenWrapperTestCase.h  FiniteDifferences.h  LayerAdapter.h  LocalResponseNormalizationTestCase.cpp  NetTestCase.cpp  NetTestCase.h  RBFTestCase.cpp  RBFTestCase.h  SigmaPiConstraintTestCase.h  test.cpp
